examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/unref_bool.st
// ERROR_NOT_A_REFERENCE

language core;
extend with #references;

fn main(n : Nat) -> Nat {
	return *(true)
}


//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
